@@ -22,10 +22,8 @@ QDBUS = @ac_qdbus@
 	QT += dbus
 }
 
-# X11 support
-unix:!macx {
-	QX11EXTRAS = @ac_qx11extras@
-	!isEmpty(QX11EXTRAS) {
-		QT += x11extras
-	}
+# Network support
+QNETWORK = @ac_qnetwork@
+!isEmpty(QNETWORK) {
+	QT += network
 }
